--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 19 year old looking to start a career in the developers world. I currently work full time at Planet Fitness and plan to use this certification as my next step up. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I’m from Pinehurst, NC. A small town and hour and a half south of here. We are famous for our golf courses and have hosted the U.S Open multiple times</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am an avid soccer fan who still gets out to go play pickup. I also enjoy watching documentaries and reading non-fiction books</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I plan to be a software developer, but throughout the course I will have surely changed my mind. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in the Raleigh area, just south of NC State.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I’ve always had an interest in computers and with such a strong job market and it being an enjoyable task for me, I would be remiss.</p>
     </section>
 
     <footer id="footer">
